--- a/src/template.html
+++ b/src/template.html
@@ -89,7 +89,7 @@
                 
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1SonUwqKBCkQEeru42RN-fRcj1QP44Vek/view">
                   View Resume
                 </a>
               </span>
