fixed the wrong idiom

--- a/src/template.html
+++ b/src/template.html
@@ -115,7 +115,7 @@
                 <h3 class="project-wrapper__text-title">ZOO Animals Information Website</h3>
                 <div>
                   <p class="mb-4">
-                    A tons of animals in Taipei Zoo. You can see images of them, you can check the Information of them.
+                    A ton of animals in Taipei Zoo. You can see images of them, you can check the Information of them.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://zoo-live1937.herokuapp.com/">
